# v1

./: AETHERIS_PROTOCOL.md  AETHERIS_SECURITY.md  README.md  metadata.json
.github/workflows/: bulid-apk.yml
app/: build.gradle.kts
app/src/main/java/com/example/: MainActivity.kt
app/src/main/java/com/example/crypto/: AetherisCore.kt
app/src/main/java/com/example/data/: AetherisRepository.kt  AppDatabase.kt  Daos.kt  Entities.kt
app/src/main/java/com/example/protocol/: AetherisNodeEngine.kt  AetherisProtocol.kt
app/src/main/java/com/example/ui/: AetherisViewModel.kt
app/src/main/java/com/example/ui/screens/: ContactsScreen.kt  DashboardScreen.kt  ExplorerScreen.kt  NodeScreen.kt  QrComponent.kt  SetupScreen.kt  VaultScreen.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/test/java/com/example/: ExampleRobolectricTest.kt  GreetingScreenshotTest.kt
rust_core/: Cargo.toml
rust_core/src/: lib.rs
