[package]
name = "aetheris-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "aetheris_core"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
bech32 = "0.9"
hmac = "0.12"
sha2 = "0.10"
ripemd = "0.1"
secp256k1 = { version = "0.28", features = ["rand", "hashes"] }
aes-gcm = "0.10"
zeroize = "1.7"
